@@ -150,7 +150,7 @@
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
           <filereports>GuacamoleTestSuite.txt</filereports>
-          <argLine>-Xmx3072m</argLine>
+          <argLine>-Xmx3072m -XX:MaxPermSize=256m</argLine>
           <stdout>F</stdout>
         </configuration>
         <executions>
@@ -312,6 +312,11 @@
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hammerlab</groupId>
+      <artifactId>magic-rdds</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
 
     <!-- Test deps -->
